fix some spacing

--- a/css/style.css
+++ b/css/style.css
@@ -414,7 +414,7 @@
 /* CTA SECTION */
 /* ********************************** */
 .section-cta {
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 12.8rem;
 }
 
 .cta {
@@ -479,10 +479,7 @@
 .cta-form input::placeholder {
   color: #aaa;
 }
-.cta-form select {
-}
-.cta-form button {
-}
+
 .cta *:focus {
   outline: none;
 
@@ -492,7 +489,8 @@
 /* CTA SECTION */
 /* ********************************** */
 .footer {
-  padding: 9.6rem 0;
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
 }
 .grid-footer {
   grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
